# Noodles

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
docs/: main.md
docs/deployment/: deploy.md  macos.md  windows.md
inteface/src/: src.txt
inteface/src/nodes/: node.cpp  node.hpp
inteface/ui/: ui.txt
translator/: translator.txt
